Fix logo spacing

--- a/template.css
+++ b/template.css
@@ -64,7 +64,7 @@ body {
     height: 80%;
     margin: 0.1%;
     position: absolute;
-    top: 1%;
+    top: 5%;
     left: 1%;
     text-align: left;
 }
@@ -72,10 +72,12 @@ body {
 #siteName {
     text-align: left;
     position: absolute;
-    left: 9%;
+    left: 5%;
+    top: -1%;
     margin: 0;
     padding: 0;
     color: white;
+    font-size: 1.25em;
 }
 
 #header {
